--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -10,38 +10,38 @@
     "compiletests": "node ./node_modules/typescript/bin/tsc -p ./tests"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "body-parser": "~1.20.2",
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.4",
+    "express": "~4.18.2",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "morgan": "~1.10.0",
+    "serve-favicon": "~2.5.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.16.1",
-    "@types/cookie-parser": "^1.3.30",
-    "@types/debug": "^0.0.29",
-    "@types/express": "^4.0.35",
-    "@types/gulp": "^4.0.2",
-    "@types/gulp-less": "^0.0.30",
-    "@types/gulp-mocha": "^0.0.30",
-    "@types/gulp-nodemon": "^0.0.30",
-    "@types/marked": "^0.0.28",
-    "@types/mocha": "^2.2.40",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.10",
-    "@types/power-assert": "^1.4.29",
-    "@types/serve-favicon": "^2.2.28",
-    "browser-sync": "^2.18.8",
-    "gulp": "^3.9.1",
-    "gulp-less": "^3.3.0",
-    "gulp-mocha": "^4.1.0",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-tsb": "^2.0.3",
-    "marked": "^0.3.6",
-    "mocha": "^3.2.0",
-    "nodemon": "^1.11.0",
-    "typescript": "^2.2.1"
+    "@types/body-parser": "1.19.4",
+    "@types/cookie-parser": "1.4.5",
+    "@types/debug": "4.1.10",
+    "@types/express": "4.17.20",
+    "@types/gulp": "4.0.16",
+    "@types/gulp-less": "0.0.35",
+    "@types/gulp-mocha": "0.0.36",
+    "@types/gulp-nodemon": "0.0.36",
+    "@types/marked": "5.0.2",
+    "@types/mocha": "10.0.3",
+    "@types/morgan": "1.9.7",
+    "@types/node": "20.8.9",
+    "@types/power-assert": "1.5.10",
+    "@types/serve-favicon": "2.5.6",
+    "browser-sync": "2.29.3",
+    "gulp": "4.0.2",
+    "gulp-less": "5.0.0",
+    "gulp-mocha": "9.0.0",
+    "gulp-nodemon": "2.5.0",
+    "gulp-tsb": "2.0.3",
+    "marked": "9.1.3",
+    "mocha": "10.2.0",
+    "nodemon": "3.0.1",
+    "typescript": "5.2.2"
   }
 }
