--- a/node-express-javascript/package.json
+++ b/node-express-javascript/package.json
@@ -1,11 +1,12 @@
 {
   "name": "node-express-javascript",
   "description": "node-express-javascript Sample Application (JavaScript)",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "private": "false",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha ./tests/test.js"
+    "test": "mocha ./tests/test.js",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
   },
   "dependencies": {
     "body-parser": "~1.20.2",
@@ -24,7 +25,25 @@
     "gulp-nodemon": "2.5.0",
     "marked": "9.1.3",
     "mocha": "10.2.0",
-    "nodemon": "3.0.1"
+    "nodemon": "3.0.1",
+    "typescript-esbuild": "0.3.1"
+  },
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "license": "MIT",
+  "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": {
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
   }
 }
-
