--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -1,13 +1,14 @@
 {
   "name": "node-express-typescript",
   "description": "node-express-typescript Sample Application (TypeScript)",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "private": "false",
   "scripts": {
     "start": "node ./out/www.js",
     "test": "mocha ./tests/out/test.js",
     "compile": "node ./node_modules/typescript/bin/tsc -p ./src",
-    "compiletests": "node ./node_modules/typescript/bin/tsc -p ./tests"
+    "compiletests": "node ./node_modules/typescript/bin/tsc -p ./tests",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
   },
   "dependencies": {
     "body-parser": "~1.20.2",
@@ -42,6 +43,25 @@
     "marked": "9.1.3",
     "mocha": "10.2.0",
     "nodemon": "3.0.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "typescript-esbuild": "0.3.1"
+  },
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "license": "MIT",
+  "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": {
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
   }
 }
