--- a/node-express-javascript/package.json
+++ b/node-express-javascript/package.json
@@ -1,12 +1,28 @@
 {
   "name": "node-express-javascript",
-  "description": "node-express-javascript Sample Application (JavaScript)",
   "version": "0.0.1",
   "private": "false",
+  "description": "node-express-javascript Sample Application (JavaScript)",
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
+  },
+  "publisher": "playform",
+  "type": "module",
   "scripts": {
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts",
     "start": "node ./bin/www",
-    "test": "mocha ./tests/test.js",
-    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
+    "test": "mocha ./tests/test.js"
   },
   "dependencies": {
     "body-parser": "~1.20.2",
@@ -28,22 +44,7 @@
     "nodemon": "3.0.1",
     "typescript-esbuild": "0.3.1"
   },
-  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
-  "bugs": {
-    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
-  },
-  "license": "MIT",
-  "type": "module",
   "publishConfig": {
     "access": "public"
-  },
-  "author": {
-    "name": "Nikola Hristov",
-    "email": "nikola@nikolahristov.tech",
-    "url": "https://nikolahristov.tech"
   }
 }
