--- a/node-express-javascript/package.json
+++ b/node-express-javascript/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "node-express-javascript",
-  "version": "0.0.1",
-  "private": "false",
-  "description": "node-express-javascript Sample Application (JavaScript)",
-  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
-  "bugs": {
-    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
-  },
-  "license": "MIT",
-  "author": {
-    "name": "Nikola Hristov",
-    "email": "nikola@nikolahristov.tech",
-    "url": "https://nikolahristov.tech"
-  },
-  "publisher": "playform",
-  "type": "module",
-  "scripts": {
-    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts",
-    "start": "node ./bin/www",
-    "test": "mocha ./tests/test.js"
-  },
-  "dependencies": {
-    "body-parser": "~1.20.2",
-    "cookie-parser": "~1.4.6",
-    "debug": "~4.3.4",
-    "express": "~4.18.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.10.0",
-    "serve-favicon": "~2.5.0"
-  },
-  "devDependencies": {
-    "browser-sync": "2.29.3",
-    "gulp": "4.0.2",
-    "gulp-less": "5.0.0",
-    "gulp-mocha": "9.0.0",
-    "gulp-nodemon": "2.5.0",
-    "marked": "9.1.3",
-    "mocha": "10.2.0",
-    "nodemon": "3.0.1",
-    "typescript-esbuild": "0.3.1"
-  },
-  "publishConfig": {
-    "access": "public"
-  }
+	"name": "node-express-javascript",
+	"version": "0.0.1",
+	"private": "false",
+	"description": "node-express-javascript Sample Application (JavaScript)",
+	"homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+	"bugs": {
+		"url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+	},
+	"license": "MIT",
+	"author": {
+		"name": "Nikola Hristov",
+		"email": "nikola@nikolahristov.tech",
+		"url": "https://nikolahristov.tech"
+	},
+	"publisher": "playform",
+	"type": "module",
+	"scripts": {
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+		"start": "node ./bin/www",
+		"test": "mocha ./tests/test.js"
+	},
+	"dependencies": {
+		"body-parser": "~1.20.2",
+		"cookie-parser": "~1.4.6",
+		"debug": "~4.3.4",
+		"express": "~4.18.2",
+		"jade": "~1.11.0",
+		"morgan": "~1.10.0",
+		"serve-favicon": "~2.5.0"
+	},
+	"devDependencies": {
+		"browser-sync": "2.29.3",
+		"gulp": "4.0.2",
+		"gulp-less": "5.0.0",
+		"gulp-mocha": "9.0.0",
+		"gulp-nodemon": "2.5.0",
+		"marked": "9.1.3",
+		"mocha": "10.2.0",
+		"nodemon": "3.0.1",
+		"typescript-esbuild": "0.3.1"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
