--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -1,68 +1,68 @@
 {
-  "name": "node-express-typescript",
-  "version": "0.0.1",
-  "private": "false",
-  "description": "node-express-typescript Sample Application (TypeScript)",
-  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
-  "bugs": {
-    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
-  },
-  "license": "MIT",
-  "author": {
-    "name": "Nikola Hristov",
-    "email": "nikola@nikolahristov.tech",
-    "url": "https://nikolahristov.tech"
-  },
-  "publisher": "playform",
-  "type": "module",
-  "scripts": {
-    "compile": "node ./node_modules/typescript/bin/tsc -p ./src",
-    "compiletests": "node ./node_modules/typescript/bin/tsc -p ./tests",
-    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts",
-    "start": "node ./out/www.js",
-    "test": "mocha ./tests/out/test.js"
-  },
-  "dependencies": {
-    "body-parser": "~1.20.2",
-    "cookie-parser": "~1.4.6",
-    "debug": "~4.3.4",
-    "express": "~4.18.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.10.0",
-    "serve-favicon": "~2.5.0"
-  },
-  "devDependencies": {
-    "@types/body-parser": "1.19.4",
-    "@types/cookie-parser": "1.4.5",
-    "@types/debug": "4.1.10",
-    "@types/express": "4.17.20",
-    "@types/gulp": "4.0.16",
-    "@types/gulp-less": "0.0.35",
-    "@types/gulp-mocha": "0.0.36",
-    "@types/gulp-nodemon": "0.0.36",
-    "@types/marked": "5.0.2",
-    "@types/mocha": "10.0.3",
-    "@types/morgan": "1.9.7",
-    "@types/node": "20.8.9",
-    "@types/power-assert": "1.5.10",
-    "@types/serve-favicon": "2.5.6",
-    "browser-sync": "2.29.3",
-    "gulp": "4.0.2",
-    "gulp-less": "5.0.0",
-    "gulp-mocha": "9.0.0",
-    "gulp-nodemon": "2.5.0",
-    "gulp-tsb": "2.0.3",
-    "marked": "9.1.3",
-    "mocha": "10.2.0",
-    "nodemon": "3.0.1",
-    "typescript": "5.2.2",
-    "typescript-esbuild": "0.3.1"
-  },
-  "publishConfig": {
-    "access": "public"
-  }
+	"name": "node-express-typescript",
+	"version": "0.0.1",
+	"private": "false",
+	"description": "node-express-typescript Sample Application (TypeScript)",
+	"homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+	"bugs": {
+		"url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+	},
+	"license": "MIT",
+	"author": {
+		"name": "Nikola Hristov",
+		"email": "nikola@nikolahristov.tech",
+		"url": "https://nikolahristov.tech"
+	},
+	"publisher": "playform",
+	"type": "module",
+	"scripts": {
+		"compile": "node ./node_modules/typescript/bin/tsc -p ./src",
+		"compiletests": "node ./node_modules/typescript/bin/tsc -p ./tests",
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+		"start": "node ./out/www.js",
+		"test": "mocha ./tests/out/test.js"
+	},
+	"dependencies": {
+		"body-parser": "~1.20.2",
+		"cookie-parser": "~1.4.6",
+		"debug": "~4.3.4",
+		"express": "~4.18.2",
+		"jade": "~1.11.0",
+		"morgan": "~1.10.0",
+		"serve-favicon": "~2.5.0"
+	},
+	"devDependencies": {
+		"@types/body-parser": "1.19.4",
+		"@types/cookie-parser": "1.4.5",
+		"@types/debug": "4.1.10",
+		"@types/express": "4.17.20",
+		"@types/gulp": "4.0.16",
+		"@types/gulp-less": "0.0.35",
+		"@types/gulp-mocha": "0.0.36",
+		"@types/gulp-nodemon": "0.0.36",
+		"@types/marked": "5.0.2",
+		"@types/mocha": "10.0.3",
+		"@types/morgan": "1.9.7",
+		"@types/node": "20.8.9",
+		"@types/power-assert": "1.5.10",
+		"@types/serve-favicon": "2.5.6",
+		"browser-sync": "2.29.3",
+		"gulp": "4.0.2",
+		"gulp-less": "5.0.0",
+		"gulp-mocha": "9.0.0",
+		"gulp-nodemon": "2.5.0",
+		"gulp-tsb": "2.0.3",
+		"marked": "9.1.3",
+		"mocha": "10.2.0",
+		"nodemon": "3.0.1",
+		"typescript": "5.2.2",
+		"typescript-esbuild": "0.3.1"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
