--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -1,13 +1,29 @@
 {
   "name": "node-express-typescript",
+  "version": "0.0.1",
+  "private": false,
   "description": "node-express-typescript Sample Application (TypeScript)",
-  "version": "0.0.0",
-  "private": true,
+  "homepage": "https://github.com/CodeEditorLand/Environment#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/Environment/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/Environment.git"
+  },
+  "license": "SEE LICENSE IN LICENSE",
+  "author": {
+    "name": "Nikola R. Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
+  },
+  "publisher": "playform",
+  "type": "module",
   "scripts": {
-    "start": "node ./out/www.js",
-    "test": "mocha ./tests/out/test.js",
     "compile": "node ./node_modules/typescript/bin/tsc -p ./src",
-    "compiletests": "node ./node_modules/typescript/bin/tsc -p ./tests"
+    "compiletests": "node ./node_modules/typescript/bin/tsc -p ./tests",
+    "prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+    "start": "node ./out/www.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -42,6 +58,10 @@
     "marked": "^0.3.6",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
-    "typescript": "^2.2.1"
+    "typescript": "^2.2.1",
+    "typescript-esbuild": "0.3.6"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
