--- a/node-express-javascript/package.json
+++ b/node-express-javascript/package.json
@@ -40,7 +40,7 @@
 		"marked": "^0.3.6",
 		"mocha": "^3.2.0",
 		"nodemon": "^1.11.0",
-		"typescript-esbuild": "latest"
+		"typescript-esbuild": "0.4.5"
 	},
 	"publishConfig": {
 		"access": "public"
