--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -58,7 +58,7 @@
 		"mocha": "^3.2.0",
 		"nodemon": "^1.11.0",
 		"typescript": "^2.2.1",
-		"typescript-esbuild": "latest"
+		"typescript-esbuild": "0.4.5"
 	},
 	"publishConfig": {
 		"access": "public"
