--- a/node-express-javascript/package.json
+++ b/node-express-javascript/package.json
@@ -1,11 +1,30 @@
 {
-	"author": {
-		"email": "Land@PlayForm.Cloud",
-		"name": "🌆 — Land —",
-		"url": "HTTPS://Land.PlayForm.Cloud"
-	},
+	"name": "node-express-javascript",
+	"version": "0.0.1",
+	"private": false,
+	"description": "node-express-javascript Sample Application (JavaScript)",
+	"keywords": [
+		"land"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandSamples#readme",
 	"bugs": {
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/LandSamples/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/LandSamples.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🌆 — Land —",
+		"email": "Land@PlayForm.Cloud",
+		"url": "HTTPS://Land.PlayForm.Cloud"
+	},
+	"type": "module",
+	"scripts": {
+		"Document": "Document 'Source/**/*.ts'",
+		"prepublishOnly": "Build 'Source/**/*.ts'",
+		"start": "node ./bin/www"
 	},
 	"dependencies": {
 		"body-parser": "1.20.2",
@@ -15,7 +34,6 @@
 		"morgan": "1.10.0",
 		"serve-favicon": "2.5.0"
 	},
-	"description": "node-express-javascript Sample Application (JavaScript)",
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
@@ -23,25 +41,7 @@
 		"marked": "12.0.2",
 		"nodemon": "3.1.0"
 	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandSamples#readme",
-	"keywords": [
-		"land"
-	],
-	"license": "SEE LICENSE IN LICENSE",
-	"name": "node-express-javascript",
-	"private": false,
 	"publishConfig": {
 		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/LandSamples.git"
-	},
-	"scripts": {
-		"Document": "Document 'Source/**/*.ts'",
-		"prepublishOnly": "Build 'Source/**/*.ts'",
-		"start": "node ./bin/www"
-	},
-	"type": "module",
-	"version": "0.0.1"
+	}
 }
