--- a/node-express-javascript/package.json
+++ b/node-express-javascript/package.json
@@ -5,16 +5,16 @@
 		"start": "node ./bin/www"
 	},
 	"dependencies": {
-		"body-parser": "~1.13.2",
-		"cookie-parser": "~1.3.5",
-		"debug": "~2.2.0",
-		"jade": "~1.11.0",
-		"morgan": "~1.6.1",
-		"serve-favicon": "~2.3.0"
+		"body-parser": "1.13.2",
+		"cookie-parser": "1.3.5",
+		"debug": "2.2.0",
+		"jade": "1.11.0",
+		"morgan": "1.6.1",
+		"serve-favicon": "2.3.0"
 	},
 	"devDependencies": {
-		"browser-sync": "^2.18.8",
-		"marked": "^0.3.6",
-		"nodemon": "^1.11.0"
+		"browser-sync": "2.18.8",
+		"marked": "0.3.6",
+		"nodemon": "1.11.0"
 	}
 }
