--- a/node-express-javascript/package.json
+++ b/node-express-javascript/package.json
@@ -1,17 +1,17 @@
 {
 	"dependencies": {
-		"body-parser": "~1.20.2",
-		"cookie-parser": "~1.4.6",
-		"debug": "~4.3.5",
-		"jade": "~1.11.0",
-		"morgan": "~1.10.0",
-		"serve-favicon": "~2.5.0"
+		"body-parser": "1.20.2",
+		"cookie-parser": "1.4.6",
+		"debug": "4.3.5",
+		"jade": "1.11.0",
+		"morgan": "1.10.0",
+		"serve-favicon": "2.5.0"
 	},
 	"description": "node-express-javascript Sample Application (JavaScript)",
 	"devDependencies": {
-		"browser-sync": "^3.0.2",
-		"marked": "^12.0.2",
-		"nodemon": "^3.1.3"
+		"browser-sync": "3.0.2",
+		"marked": "12.0.2",
+		"nodemon": "3.1.3"
 	},
 	"name": "node-express-javascript",
 	"scripts": {
