--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -1,25 +1,25 @@
 {
 	"dependencies": {
-		"body-parser": "~1.13.2",
-		"cookie-parser": "~1.3.5",
-		"debug": "~2.2.0",
-		"jade": "~1.11.0",
-		"morgan": "~1.6.1",
-		"serve-favicon": "~2.3.0"
+		"body-parser": "1.13.2",
+		"cookie-parser": "1.3.5",
+		"debug": "2.2.0",
+		"jade": "1.11.0",
+		"morgan": "1.6.1",
+		"serve-favicon": "2.3.0"
 	},
 	"description": "node-express-typescript Sample Application (TypeScript)",
 	"devDependencies": {
-		"@types/body-parser": "^1.16.1",
-		"@types/cookie-parser": "^1.3.30",
-		"@types/debug": "^0.0.29",
-		"@types/marked": "^0.0.28",
-		"@types/morgan": "^1.7.32",
-		"@types/node": "^7.0.10",
-		"@types/power-assert": "^1.4.29",
-		"@types/serve-favicon": "^2.2.28",
-		"browser-sync": "^2.18.8",
-		"marked": "^0.3.6",
-		"nodemon": "^1.11.0"
+		"@types/body-parser": "1.16.1",
+		"@types/cookie-parser": "1.3.30",
+		"@types/debug": "0.0.29",
+		"@types/marked": "0.0.28",
+		"@types/morgan": "1.7.32",
+		"@types/node": "7.0.10",
+		"@types/power-assert": "1.4.29",
+		"@types/serve-favicon": "2.2.28",
+		"browser-sync": "2.18.8",
+		"marked": "0.3.6",
+		"nodemon": "1.11.0"
 	},
 	"name": "node-express-typescript",
 	"scripts": {
