--- a/node-express-javascript/package.json
+++ b/node-express-javascript/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"body-parser": "2.0.0-beta.2",
+		"body-parser": "1.20.2",
 		"cookie-parser": "1.4.6",
 		"debug": "4.3.6",
 		"jade": "1.11.0",
@@ -10,7 +10,7 @@
 	"description": "node-express-javascript Sample Application (JavaScript)",
 	"devDependencies": {
 		"browser-sync": "3.0.2",
-		"marked": "14.0.0",
+		"marked": "14.1.0",
 		"nodemon": "3.1.4"
 	},
 	"name": "node-express-javascript",
