--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -1,25 +1,25 @@
 {
 	"dependencies": {
-		"body-parser": "~1.20.3",
-		"cookie-parser": "~1.4.7",
-		"debug": "~4.3.7",
-		"jade": "~1.11.0",
-		"morgan": "~1.10.0",
-		"serve-favicon": "~2.5.0"
+		"body-parser": "1.20.3",
+		"cookie-parser": "1.4.7",
+		"debug": "4.3.7",
+		"jade": "1.11.0",
+		"morgan": "1.10.0",
+		"serve-favicon": "2.5.0"
 	},
 	"description": "node-express-typescript Sample Application (TypeScript)",
 	"devDependencies": {
-		"@types/body-parser": "^1.19.5",
-		"@types/cookie-parser": "^1.4.7",
-		"@types/debug": "^4.1.12",
-		"@types/marked": "^6.0.0",
-		"@types/morgan": "^1.9.9",
-		"@types/node": "^22.7.5",
-		"@types/power-assert": "^1.5.12",
-		"@types/serve-favicon": "^2.5.7",
-		"browser-sync": "^3.0.3",
-		"marked": "^14.1.2",
-		"nodemon": "^3.1.7"
+		"@types/body-parser": "1.19.5",
+		"@types/cookie-parser": "1.4.7",
+		"@types/debug": "4.1.12",
+		"@types/marked": "6.0.0",
+		"@types/morgan": "1.9.9",
+		"@types/node": "22.7.5",
+		"@types/power-assert": "1.5.12",
+		"@types/serve-favicon": "2.5.7",
+		"browser-sync": "3.0.3",
+		"marked": "14.1.2",
+		"nodemon": "3.1.7"
 	},
 	"name": "node-express-typescript",
 	"scripts": {
